Fixed the alignment issue in edit pop up

--- a/client/assets/css/style.css
+++ b/client/assets/css/style.css
@@ -141,7 +141,7 @@ body {
   position:absolute;
   left:16%;
   top:9%;
-  width: 67%;
+  width: 70%;
   height: 85%;
   z-index:111111 !important;
   background-color: white;
